<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FretBoardActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fretboardLayout"
                android:orientation="vertical"
                android:background="?attr/FretboardWood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llMarker"
                    android:orientation="horizontal"
                    android:background="?attr/FretboardWood"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp">
                    <TextView
                        android:text="0"
                        style="@style/Marker" />
                    <TextView
                        android:text="1"
                        style="@style/Marker" />
                    <TextView
                        android:text="2"
                        style="@style/Marker" />
                    <TextView
                        android:text="3"
                        style="@style/DottedMarker" />
                    <TextView
                        android:text="4"
                        style="@style/Marker" />
                    <TextView
                        android:text="5"
                        style="@style/DottedMarker"  />
                    <TextView
                        android:text="6"
                        style="@style/Marker" />
                    <TextView
                        android:text="7"
                        style="@style/DottedMarker"  />
                    <TextView
                        android:text="8"
                        style="@style/Marker" />
                    <TextView
                        android:text="9"
                        style="@style/DottedMarker"  />
                    <TextView
                        android:text="10"
                        style="@style/Marker" />
                    <TextView
                        android:text="11"
                        style="@style/Marker" />
                    <TextView
                        android:text="12"
                        style="@style/DoubleDottedMarker"  />
                    <TextView
                        android:text="13"
                        style="@style/Marker" />
                    <TextView
                        android:text="14"
                        style="@style/Marker" />
                    <TextView
                        android:text="15"
                        style="@style/DottedMarker" />
                    <TextView
                        android:text="16"
                        style="@style/Marker" />
                    <TextView
                        android:text="17"
                        style="@style/DottedMarker" />
                    <TextView
                        android:text="18"
                        style="@style/Marker" />
                    <TextView
                        android:text="19"
                        style="@style/DottedMarker" />
                    <TextView
                        android:text="20"
                        style="@style/Marker" />
                    <TextView
                        android:text="21"
                        style="@style/DottedMarker" />
                    <TextView
                        android:text="22"
                        style="@style/Marker" />
                    <TextView
                        android:text="23"
                        style="@style/Marker" />
                    <TextView
                        android:text="24"
                        style="@style/DoubleDottedMarker"  />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/rvStrings"

                    android:nestedScrollingEnabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    tools:listitem="@layout/string" />

            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/searchButton"
                    android:text="search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"/>
                <Spinner
                    android:id="@+id/scalePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"/>
                <Spinner
                    android:id="@+id/modePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"/>
                <Button
                    android:id="@+id/selectButton"
                    android:text="@string/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />
                <Button
                    android:id="@+id/deletButton"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />
                <Button
                    android:id="@+id/chordButton"
                    android:text="@string/chords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"/>
                <Button
                    android:id="@+id/themeButton"
                    android:text="@string/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"/>
            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>